--- a/pwa-tb/Dockerfile
+++ b/pwa-tb/Dockerfile
@@ -1,16 +1,14 @@
-FROM node:10
+FROM alpine:latest
+RUN apk add --no-cache nodejs npm
 
-# Create app directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
-# Install app dependencies
-COPY package*.json ./
+COPY . /app
 
 RUN npm install
 
-# Bundle app source
-COPY . .
-
 EXPOSE 8080
 
-CMD [ "npm", "start" ]
+ENTRYPOINT ["node"]
+
+CMD ["server.js"]
